--- a/CubanDoll/assets/css/main.css
+++ b/CubanDoll/assets/css/main.css
@@ -157,7 +157,7 @@
 		}
 
 		100% {
-			opacity: 1;
+			opacity: 0;
 		}
 	}
 
@@ -1670,10 +1670,11 @@
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: rgb(0, 0, 0, 0);
+		background: rgb(0,0,0,0);
 		height: 3em;
 		line-height: 3em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0);
+
 	}
 
 		#header h1 {
@@ -2103,16 +2104,22 @@
 /* One */
 
 	#one {
-		background: url("images/overlay.png"), url("../../images/one.jpg");
+		background: url("images/black.jpg"), url("../../images/black.jpg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
 
+	#one album01{
+		position: absolute;
+		size:128px, 128px;
+	}
+
+
 /* Two */
 
 	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
+		background: url("images/cuban05.jpg"), url("../../images/cuban05.jpg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
