Made the header bar transparent

--- a/CubanDoll/assets/css/main.css
+++ b/CubanDoll/assets/css/main.css
@@ -1745,13 +1745,13 @@
 		}
 
 	body {
-		padding-top: 3em;
+		padding-top: 0;
 	}
 
 		@media screen and (max-width: 736px) {
 
 			body {
-				padding-top: 2.5em;
+				padding-top: 0;
 			}
 
 		}
