--- a/CubanDoll/assets/css/main.css
+++ b/CubanDoll/assets/css/main.css
@@ -2104,10 +2104,11 @@
 /* One */
 
 	#one {
-		background: url("images/black.jpg"), url("../../images/black.jpg");
+		background: url("images/black.jpg"), url("../../images/cubangif02.gif");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
+		/*opacity: 0.15;*/
 	}
 
 	#one album01{
